kubernetes/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: custom-headers
  namespace: test-app
spec:
  headers:
    forceSTSHeader: true
    stsPreload: true
    stsIncludeSubdomains: true
    stsSeconds: 63072000
    frameDeny: true
    browserXssFilter: true
